test/types/sync/vass/error-storing-in-tuple.good
error-storing-in-tuple.chpl:8: In function 'main':
error-storing-in-tuple.chpl:9: error: storing a sync or single variable SSS in a tuple is not currently implemented - apply readFE() or readFF()
error-storing-in-tuple.chpl:9: error: type mismatch in assignment from real(64) to _syncvar(real(64))
